--- a/root/src/horn/src/bdw-gc/Makefile
+++ b/root/src/horn/src/bdw-gc/Makefile
@@ -380,14 +380,14 @@ DIST_ARCHIVES = $(distdir).tar.gz $(distdir).tar.bz2
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run aclocal-1.11
-AMTAR = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run tar
+ACLOCAL = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run aclocal-1.11
+AMTAR = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run tar
 AR = ar
 ATOMIC_OPS_CFLAGS = -I$(top_builddir)/libatomic_ops/src -I$(top_srcdir)/libatomic_ops/src
 ATOMIC_OPS_LIBS = 
-AUTOCONF = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run automake-1.11
+AUTOCONF = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run automake-1.11
 AWK = awk
 CC = gcc
 CCAS = gcc
@@ -433,7 +433,7 @@ LIPO = lipo
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/missing --run makeinfo
+MAKEINFO = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = ./install-sh -c -d
 NM = /usr/bin/nm
@@ -459,10 +459,10 @@ STRIP = strip
 THREADDLLIBS = -lpthread
 UNWINDLIBS = 
 VERSION = 7.2
-abs_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc
-abs_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc
-abs_top_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc
-abs_top_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc
+abs_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc
+abs_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc
+abs_top_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc
+abs_top_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -485,7 +485,7 @@ datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
-exec_prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/../../../root
+exec_prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root
 extra_ldflags_libgc = -Wl,-single_module
 host = x86_64-apple-darwin11.4.2
 host_alias = 
@@ -495,7 +495,7 @@ host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/install-sh
+install_sh = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -504,7 +504,7 @@ mandir = ${datarootdir}/man
 mkdir_p = $(top_builddir)/./install-sh -c -d
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/../../../root
+prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
