--- a/root/src/horn/src/bdw-gc/libatomic_ops/src/Makefile
+++ b/root/src/horn/src/bdw-gc/libatomic_ops/src/Makefile
@@ -139,11 +139,11 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run aclocal-1.11
-AMTAR = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run tar
-AUTOCONF = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run automake-1.11
+ACLOCAL = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run aclocal-1.11
+AMTAR = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run tar
+AUTOCONF = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run automake-1.11
 AWK = awk
 CC = gcc
 CCAS = gcc
@@ -171,7 +171,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/missing --run makeinfo
+MAKEINFO = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/missing --run makeinfo
 MKDIR_P = .././install-sh -c -d
 OBJEXT = o
 PACKAGE = libatomic_ops
@@ -189,10 +189,10 @@ SHELL = /bin/sh
 STRIP = 
 THREADDLLIBS = 
 VERSION = 7.2
-abs_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/src
-abs_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/src
-abs_top_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops
-abs_top_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops
+abs_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/src
+abs_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/src
+abs_top_builddir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops
+abs_top_srcdir = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -210,7 +210,7 @@ datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
-exec_prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/../../../root
+exec_prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root
 host = x86_64-apple-darwin11.4.2
 host_alias = 
 host_cpu = x86_64
@@ -219,7 +219,7 @@ host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/bdw-gc/libatomic_ops/install-sh
+install_sh = ${SHELL} /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root/src/horn/src/bdw-gc/libatomic_ops/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -228,7 +228,7 @@ mandir = ${datarootdir}/man
 mkdir_p = $(top_builddir)/./install-sh -c -d
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/tools/horn/src/../../../root
+prefix = /Users/impguard/Dropbox/Documents/college/fa2013/cs164/proj/root
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
